# jj-pr

./: README.md  compose.yml  pyproject.toml
.github/workflows/: build.yml
src/jjpp/: jj.py  jj_cli.py  main.py  utils.py
src/jjpp/forges/: __init__.py  base.py  gerrit.py  github.py  phabricator.py
src/jjpr/: cmds.py  cmds_test.py  conftest.py  exc.py  git.py  jj.py  main.py  utils.py
src/jjpr/forges/: __init__.py  base.py  cr.py  detect.py  detect_test.py  gerrit.py  github.py  phabricator.py
src/jjpr/forges/gerrit/: README.md  client.py  conftest.py  forge.py  forge_test.py
src/jjpr/forges/github/: conftest.py  forge.py  forge_test.py
src/jjpr/forges/phabricator/: client.py  client_test.py  conftest.py  forge.py  forge_test.py
src/jjpr/utils/: exec.py  exec_test.py  git.py  git_test.py  jj.py  jj_cli.py  jj_test.py
tests/: __init__.py  cmds.py  conftest.py  git.py  jj.py  jj_cli.py  main.py  utils.py
tests/forges/: base.py  init.py  phabricator.py
tests/integration/gerrit/: conftest.py
tests/integration/github/: conftest.py
tests/integration/phabricator/: conftest.py
