[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jjpp"
version = "0.1.0"
description = "Unified CLI for multiple code review forges (GitHub, Phabricator, Gerrit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
jjpp = "jjpp.main:run"

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "pytest>=9.1.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.1.0",
    "ty>=0.0.49",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jjpp"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["*.py"]
addopts = "--cov=jjpp --cov-report=term-missing"
